* devices
  - LX: support flight download from LXNAV Nano (#2085)
  - LX: read bugs setting from the LX160 vario (#2167)
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
  - Android/IOIO: support MS5611 pressure sensor
  - added driver for Levil AHRS device
  - Leonardo: read indicated airspeed from PDGFTL1 sentence
  - C-Probe: read IAS/TAS from the device
* logger
  - auto-flush IGC logger after every fix
* user interface
  - preselect first item with details in map item list for
    faster access (#2069, #2207)
  - non-modal FLARM radar (with InfoBoxes and menu)
  - show FAI triangle sectors in task manager
  - can drag modal dialogs
  - short click opens InfoBox dialog
  - support keyboard input on desktop computer
  - improved angle input (e.g. wind direction, sector radials)
  - faster map initialisation during startup
  - reduce audio vario latency
* infoboxes
  - added thermal assistant infobox
  - inverse colors for wind arrow infobox and flarm gauge (#2337)
* track friends via internet connection (SkyLines live tracking)

Version 6.4.6 - not yet released
* devices
  - Leonardo: fixed vario parser for the $c sentence
  - C-Probe: fixed temperature offset bug
* infoboxes
  - fixes broken wind arrow display in some situations (#2295)
* data files
  - fixed arc airspace approximation threshold handling (#2360)

Version 6.4.5 - 2012/12/14
* calculations
  - fix rounding error in convex boundary calculation (#2477)
* devices
  - Vega: fix MacCready setting feedback loop (#1218, #2490)
* user interface
  - faster gesture drawing
  - fix crash in InfoBox page setup (#2122)
  - allow scrolling the check list on Altair (#1289)
* map
  - fix crash in terrain renderer with broken map file (#2478)
* data files
  - added "LAK-12" polar

Version 6.4.4 - 2012/11/15
* devices
  - CAI302: longer timeout for "CLEAR LOG"
* user interface
  - fix font preview in configuration dialog
  - fix the Escape key on Altair
  - fix wind InfoBox dialog layout (#2192)