@@ -25,6 +25,8 @@ Version 6.5 - not yet released
   - added driver for Levil AHRS device
   - Leonardo: read indicated airspeed from PDGFTL1 sentence
   - C-Probe: read IAS/TAS from the device
+* data files
+  - added MATZ airspace class (#2530)
 * logger
   - auto-flush IGC logger after every fix
 * user interface
